2008-12-17  Gary Benson  <gbenson@redhat.com>

	* contrib/mixtec-hacks.patch: Updated.

2008-12-17  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
	(_Copy_conjoint_jshorts_atomic): Implemented.

2008-12-17  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-zero.patch: Update for PARISC.

2008-12-16  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-version.patch: Moved bug report link
	patch to following file.
	* patches/hotspot/14.0b08/icedtea-version.patch: Added patch.

2008-12-16  Andrew Haley  <aph@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::CreatePopFrame): Remove _LP64 special-case code.

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp (SharkBlock::parse):
	Don't call pop() more than once in an arglist.

2008-12-15  Lillian Angel  <langel@redhat.com>

	Fixes #475888
	* patches/icedtea-version.patch: Added patch to set bug report link to
	icedtea's bugzilla.

2008-12-11  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Clean up output shown in non debug mode.
	* plugin/icedtea/netscape/javascript/JSObject.java: Same.
	* rt/net/sourceforge/jnlp/NetxPanel.java: Same.
	* rt/net/sourceforge/jnlp/PluginBridge.java: Same.

2008-12-10  Matthias Klose  <doko@ubuntu.com>

	* patches/hotspot/*/icedtea-text-relocations.patch: Update for PARISC.
	* patches/icedtea-zero.patch: Likewise.
	* patches/hotspot/*/icedtea-parisc-opt.patch: New.
	* Makefile.am (ICEDTEA_PATCHES): Apply icedtea-parisc-opt.patch.

2008-12-10  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Remove spurious
	call to getSecuritymanager() that was causing a CCE.
	* rt/net/sourceforge/jnlp/JARDesc.java: Track if the jar is cacheable or
	not.
	* rt/net/sourceforge/jnlp/Parser.java: Provide new cacheable param to
	JARDesc constructor.
	* rt/net/sourceforge/jnlp/PluginBridge.java: Track cache_archive and
	cache_archive_ex parameters in addition to archive.